# plonky2

./: .gitignore  Cargo.toml  README.md
scripts/: polynomial_inverses.py
src/: constants.rs  lib.rs
src/domains/: mod.rs
src/fft/: mod.rs  mt.rs  recursive.rs  serial.rs
src/field/: goldilocks.rs  mod.rs
src/fri/: authentication.rs  commitment.rs  fold.rs  mod.rs  proof.rs
src/plonk/: circuit.rs  mod.rs  proofs.rs  protocols.rs
src/polynomial/: arithmetic.rs  mod.rs
src/stark/: fold.rs  mod.rs  proof.rs
src/utils/: mod.rs
