[package]
name = "plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.12" }
byteorder = { version = "1.4" }
ff = { version = "0.13", features = ["derive", "alloc"] }
rand = { version = "0.8.5" }
blake3 = { version = "1.3" }

